# glassbox

./: .gitignore  CHANGES_QUICK_REFERENCE.md  Makefile  PR_284_improve_trace_export_regression_mock_harness.md  README.md  glassbox.example.toml  go.mod  go.sum  issues.md  size_thresholds.conf  tsconfig.test.json
.github/workflows/: release.yml  size-check.yml
cmd/glassbox/: main.go
docs/: WATCH_MODE.md  audit-signing.md  audit-verify-command.md  auth-debug-command.md  debug-command.md  event-schemas.md  incremental-trace-refresh.md  json-output.md  no-color.md  regression-test-command.md  report-command.md  sandboxed-replay.md  security-warnings.md  session-bookmarking.md  snapshot-deduplication.md  source-mapping.md  trace-cost-breakdowns.md  trace-export-annotations.md  trace-export-validation.md  trace-profiling.md  vulnerability-scanner.md
docs/adr/: deeplink-parameters.md
docs/showcase/: package-lock.json  package.json
examples/bindings/: README.md  example.ts
internal/abi/: importer.go  spec.go  wasm_size.go  wasm_size_test.go
internal/authtrace/: custom_auth.go  reporter.go  tracker.go  types.go  validate.go  validate_test.go
internal/bindings/: generator.go  generator_test.go  integration_test.go
internal/clioutput/: output.go  output_test.go
internal/cmd/: aliases_test.go  audit.go  audit_keygen.go  audit_keygen_test.go  audit_provenance_test.go  audit_sign.go  audit_sign_hsm_test.go  audit_sign_pkcs11_test.go  (+77 more)
scripts/: check_binary_size.sh
simulator/: Cargo.toml
simulator/src/: main_test.rs  signature_verification_mock_test.rs  simulator_safety_test.rs  test.rs  types.rs
simulator/tests/: signature_verification_mock_test.rs
tests/: pkcs11Signer.signing.test.ts  pkcs11Signer.test.ts
(+219 files in other folders)
