[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[lints.rust]
unused_variables = "warn"
unused_imports = "warn"
unused_mut = "warn"
dead_code = "warn"
unused_assignments = "warn"

[lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"

[dependencies]
# soroban-env-host major version == Soroban protocol version.
# Protocol 21 (v21.x) introduced DiagnosticLevel, get_events(), and the
# HostedContractEvent.failed_call field that this simulator relies on.
# We accept any release in the 21-25 range so the binary stays compatible
# with both mainnet protocol 21 and subsequent minor protocol bumps.
soroban-env-host = { version = ">=21.0, <26" } # Updated to latest version
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
inferno = "0.11"
jsonschema = "0.40.2"
object = { version = "0.38.1", features = ["wasm"] }
gimli = "0.31"
wasmparser = "0.252.0"
sha2 = "0.10.9"
dirs = "6.0.0"
hex = "0.4.3"
bincode = "1.3.3"
async-trait = "0.1.89"
thiserror = "2.0.18"
libloading = "0.8"
colored = "2.1"
ed25519-dalek = { version = "2.2.0", features = ["pem", "pkcs8"] }
k256 = { version = "0.13.4", features = ["ecdsa", "pem"] }
rand = "0.8"
tokio = { version = "1.49.0", features = ["time"] }
libc = "0.2"
zstd = "0.13"
regex = "1.12.3"
once_cell = "1.21.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
wat = "1"
